# CO2-catalysis

./: .gitignore  .nbstripout  Bicarb_characterization_data.xlsx  GP50.out  GPPH50.out  G_M.py  Graphs_and_metrics.py  LICENSE  README  README.md  early_peak_summary.csv  params_init.pkl  pyproject.toml  requirements.txt  run_config.yaml  run_config_bicarb.yaml  run_experiment.py  run_main_experiment.py  solution2.pkl  submit_experiment.py  try_torch.ipynb  ubc_modelling.ipynb
analytical-models/: 1-s2.0-S0013468621012779-mmc2.xlsx  analytical_solution.ipynb  co2_eql.xlsx  core.py  excel_to_python.ipynb  excel_to_python_edit.ipynb
analytical_models/: analytical_solution.ipynb  excel_to_python.ipynb  excel_to_python_edit.ipynb  gde_c2h4.py  gde_co.py  gde_multi.py  loaders.py
carbondriver/: __init__.py  config.py  gde_multi.py  loaders.py  models.py  post.py  test_gde_multi.py  train.py
paper/: Characterization_data.xlsx  active_learning.ipynb  active_learning.py  interpretability.ipynb  sensitivity_analysis.ipynb
tests/: test_api.py  test_gde_multi.py
tests/tmp_test_out/: stats_00.csv  stats_01.csv
