[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "co2_catalysis"
description = "Modelling of electrochemical reduction of CO2"
version = "0.1.0"
authors = [
  { name="Ivan Grega", email="grega.ivan@gmail.com" },
]

[tool.setuptools.packages.find]
include = ["analytical_models*"]